brunokrams.de/deployment/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brunokrams-de
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brunokrams-de
  template:
    metadata:
      labels:
        app: brunokrams-de
    spec:
      containers:
      - name: brunokrams-de
        image: brunokrams/pages:brunokrams-de-1
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: brunokrams-de
spec:
  type: ClusterIP
  selector:
    app: brunokrams-de
  ports:
  - port: 80
    targetPort: 8080
